--- a/gradle/corelibs.versions.toml
+++ b/gradle/corelibs.versions.toml
@@ -7,6 +7,7 @@ ktorClientCore = "3.1.0"
 ktorClientCio = "3.1.0"
 koin-bom = "4.0.0"
 ktorClientLogging = "2.3.12"
+decompose = "3.3.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -20,6 +21,7 @@ ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "k
 kotlin-serialization = {module = "io.ktor:ktor-serialization-kotlinx-json", version.ref="ktorClientCio"}
 ktor-client-content-negotiation = {module = "io.ktor:ktor-client-content-negotiation", version.ref= "ktorClientCio"}
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
+navigation-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose"}
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
