--- a/gradle/corelibs.versions.toml
+++ b/gradle/corelibs.versions.toml
@@ -2,16 +2,14 @@
 agp = "8.8.2"
 kotlin = "2.1.10"
 compose-multiplatform = "1.7.0"
-ktorClientAuth = "2.3.5"
 ktor = "3.1.0"
 koin-bom = "4.0.0"
-ktorClientLogging = "2.3.12"
 decompose = "3.3.0"
 
 [libraries]
 decompose-extension = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose"}
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktorClientAuth" }
+ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
 ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 ktor-client-core = { group = "io.ktor", name= "ktor-client-core", version.ref = "ktor" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
@@ -20,7 +18,7 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
 kotlin-serialization = {module = "io.ktor:ktor-serialization-kotlinx-json", version.ref="ktor"}
 ktor-client-content-negotiation = {module = "io.ktor:ktor-client-content-negotiation", version.ref= "ktor"}
-ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 navigation-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose"}
 
 [plugins]
